# ollama-benchmark-center

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: ci.yml
agent/: Dockerfile  Dockerfile.dev  pyproject.toml
agent/app/: main.py
agent/app/core/: auth.py  config.py
agent/app/services/: benchmark.py  hardware.py  ollama.py
agent/tests/: test_hardware.py
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_recommendation_details.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/models/: entities.py
backend/app/repositories/: benchmarks.py  hosts.py
backend/app/schemas/: api.py
backend/app/services/: agent_client.py  benchmark_matrix.py  exports.py  recommendations.py
backend/tests/: test_recommendation_resolution.py  test_recommendations.py
docs/: architecture.md  benchmarking.md  docker-compose.md  gpu-development.md  helm.md  kubernetes.md  local-development.md  observability.md  recommendations.md  security.md
docs/runbooks/: agent-offline.md  benchmark-failing.md  gpu-not-detected.md  ollama-unavailable.md
frontend/: Dockerfile.dev  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: api.ts  main.tsx  recommendation.ts  store.ts  styles.css
frontend/tests/: recommendation.test.ts  smoke.test.ts
scripts/: build-images.sh  generate-k8s-from-helm.sh
(+32 files in other folders)
